# todo_rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
migrations/: 20250318212016_create_tasks_table.sql  20250318214524_modify_tasks_table.sql  20250318220925_create_tasks_table.sql  20250319091000_create_users_table.sql  20250320202629_update_tasks_table.sql  20250321081730_update_users_table.sql  20250321084417_update_users_table.sql
src/: main.rs
src/config/: app_config.rs  mod.rs  supabase_config.rs
src/features/auth/: handlers.rs  middlewares.rs  mod.rs  models.rs  routes.rs  services.rs
src/features/tasks/: handlers.rs  mod.rs  models.rs  routes.rs
src/features/users/: handlers.rs  models.rs  routes.rs  services.rs
src/shared/: db.rs
src/utils/: mod.rs
