[package]
name = "todo_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
jsonwebtoken = "9.3.1"
lettre = "0.11.15"
lettre_email = "0.9.4"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
zxcvbn = "3.1.0"
